Done module bookmarks and refactor code